# discret_flutter

./: .gitignore  LICENCE  README.md  discret.conf.toml  pubspec.yaml
.discret_data/-k/: -kehCg0ym4oIEvLpcMzNhK0ZIuO8IsvoGQ34-Rz7MlE
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/discret_flutter/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: discret.dart  discret.g.dart  example_advanced_chat copy.dart  example_advanced_chat.dart  example_simple_chat.dart  main.dart
lib/messages/: discret.pb.dart  discret.pbenum.dart  discret.pbjson.dart  discret.pbserver.dart  generated.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
messages/: discret.proto
native/hub/: Cargo.toml
native/hub/src/: discret_binding.rs  lib.rs
native/hub/src/messages/: discret.rs  generated.rs  mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
