[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = { version = "6.14.2", features = ["rt-multi-thread"] }
prost = "0.12.6"
tokio = { version = "1", features = ["sync", "rt"] }
toml = "0.8.15"
discret = { path = "/home/driou/dev/project/discret_workspace/discret" }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
