[package]
# Do not change the name of this crate.
name = "hub"
version = "0.6.2"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = { version = "6.14.2", features = ["rt-multi-thread"] }
prost = "0.12.6"
tokio = { version = "1", features = ["sync", "rt"] }
toml = "0.8.15"
discret = { version = "0.6.2", features = ["log"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
log = { version = "0.4.22", features = ["std"] }
